# MCP_Server_Demo

./: .gitignore  README.md  main.py  main_github.py  main_sqlite.py  pyproject.toml
app/mcp_github/: tools.py
app/mcp_sqlite/: tools.py
dependencies/: github.py  sqlite.py
domain/github/interface/: i_github_repository.py
domain/github/usecase/: close_issue_usecase.py  create_issue_usecase.py  create_pullrequest_usecase.py  get_filecontents_usecase.py  list_issues_usecase.py  list_pullrequests_usecase.py  search_repos_usecase.py
domain/sqlite/interface/: i_user_repository.py
domain/sqlite/usecase/: create_user_usecase.py  get_user_usecase.py
repository/github/: github_repository.py
repository/sqlite/: user_repository.py
shared/: auth.py  base.py
shared/db/: database.py
src/github/app/: server.py  tools.py
src/github/domain/: github_service.py
src/github/interfaces/: i_github_repository.py
src/github/models/: models.py
src/github/repository/: github_repository.py
src/sqlite/app/: server.py  tools.py
src/sqlite/domain/: user_service.py
src/sqlite/interfaces/: i_user_repository.py
src/sqlite/models/: user.py
src/sqlite/repository/: user_repository.py
