[project]
name = "mcp-demo"
version = "0.1.0"
description = "MCP Demo — SQLite & GitHub servers"
requires-python = ">=3.11"

dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]