[project]
name = "mcp-demo"
version = "0.1.0"
description = "MCP Demo — SQLite & GitHub servers"
requires-python = ">=3.11"

dependencies = [
    "mcp[cli]>=1.9.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "PyGithub>=2.3.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "domain", "shared", "repository", "dependencies"]